syntax = "proto3";

package location;

option go_package = "shared/proto/location;location";

service LocationService{
  rpc RegisterLocation(RegisterLocationRequest) returns (RegisterLocationResponse);
  rpc CalculateDistance(CalculateDistanceRequest) returns (CalculateDistanceResponse);
}

message RegisterLocationRequest{
  string userId = 1;
  Coordinate coordinate = 2;
  string timestamp = 3;
}

message RegisterLocationResponse{
  string userId = 1;
  repeated LocationRecord locationRecords = 2;
}

message CalculateDistanceRequest{
  string userId =1;
  string dateRange = 2;
}

message CalculateDistanceResponse{
  double distance = 1;
}

message LocationRecord{
  Coordinate coordinate = 1;
  string timestamp = 2;
}
message Coordinate{
  double latitude = 1;
  double longitude = 2;
}